Document most of graph package